duniverse/expect_test_helpers_kernel/expect_test_helpers_base/test/test_type_errors.mlt
open! Base

open! Expect_test_helpers_base

let () = require_equal [%here] ()

[%%expect
  {|
Line _, characters 31-33:
Error: This expression has type unit but an expression was expected of type
         (module Expect_test_helpers_base.With_equal with type t = 'a)
|}]

let () = require_compare_equal [%here] ()

[%%expect
  {|
Line _, characters 39-41:
Error: This expression has type unit but an expression was expected of type
         (module Expect_test_helpers_base.With_compare with type t = 'a)
|}]
